fix(experiences): z-index prevent user from clicking slide content

--- a/app/assets/styles/experiences.css
+++ b/app/assets/styles/experiences.css
@@ -4,7 +4,7 @@
         top: 0;
         padding: 2rem 0;
         margin-top: 2rem;
-        /* z-index: 2; */
+        z-index: 2;
         &::before {
             content: "";
             position: absolute;
@@ -27,8 +27,8 @@
         }
     }
     #XpSwiper {
-        position: relative;
-        z-index: -1;
+        /* position: relative;
+        z-index: -1; */
         &.loading {
             &::before,
             .slide-item {
